# NomAI

./: .gitignore  env_template  main.py  pyproject.toml  readme.md  runtime.txt
app/agent/: agent.py
app/config/: chat_config.py  model_config.py
app/endpoints/: chat.py  diet.py  nutrition.py
app/exceptions/: __init__.py
app/middleware/: exception_handlers.py
app/models/: ErrorModels.py  NutritionInputPayload.py  NutritionOutputPayload.py  ServiceResponse.py  __init__.py  chat_message_request.py  chat_models.py  diet_model.py  nutrition_input_payload.py  nutrition_output_payload.py  service_response.py
app/services/: agent_service.py  chat_database.py  chat_service.py  diet_service.py  image_service.py  nutrition_service.py  prompt_service.py  supabase_chat_database.py
app/static/: chat_app.html  chat_app.ts
app/tools/: agent_tools.py
app/utils/: envManager.py  error_handler.py  token.py
static/: chat_app.ts
