[project]
name = "nomai-backend"
version = "0.1.0"
description = "NomAI Backend - AI-powered nutrition and chat API"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types",
    "anthropic",
    "anyio",
    "argcomplete",
    "asgiref",
    "boto3",
    "botocore",
    "CacheControl",
    "cachetools",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "cohere",
    "colorama",
    "cryptography",
    "distro",
    "eval_type_backport",
    "executing",
    "fasta2a",
    "fastapi",
    "fastavro",
    "filelock",
    "firebase-admin",
    "fsspec",
    "google-ai-generativelanguage",
    "google-api-core",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-cloud-core",
    "google-cloud-firestore",
    "google-cloud-storage",
    "google-crc32c",
    "google-genai",
    "google-generativeai",
    "google-resumable-media",
    "googleapis-common-protos",
    "griffe",
    "groq",
    "grpcio",
    "grpcio-status",
    "h11",
    "hf-xet",
    "httpcore",
    "httplib2",
    "httpx",
    "httpx-sse",
    "huggingface-hub",
    "idna",
    "importlib_metadata",
    "jiter",
    "jmespath",
    "logfire",
    "logfire-api",
    "markdown-it-py",
    "mcp",
    "mdurl",
    "mistralai",
    "msgpack",
    "openai",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-dbapi",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-sqlite3",
    "opentelemetry-proto",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "opentelemetry-util-http",
    "packaging",
    "pillow",
    "prompt_toolkit",
    "proto-plus",
    "protobuf",
    "pyasn1",
    "pyasn1_modules",
    "pycparser",
    "pydantic",
    "pydantic-ai[logfire]",
    "pydantic-ai-slim",
    "pydantic-evals",
    "pydantic-graph",
    "pydantic-settings",
    "Pygments",
    "PyJWT",
    "pyparsing",
    "python-dateutil",
    "python-dotenv",
    "python-multipart",
    "PyYAML",
    "requests",
    "rich",
    "rsa",
    "s3transfer",
    "six",
    "sniffio",
    "sse-starlette",
    "starlette",
    "tenacity",
    "tokenizers",
    "tqdm",
    "types-requests",
    "typing_extensions",
    "typing-inspection",
    "uritemplate",
    "urllib3",
    "uvicorn",
    "wcwidth",
    "websockets",
    "wrapt",
    "zipp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
